docs/7.57/md/abapmodify_itab_shortref.md
---
title: "MODIFY itab - Short Reference"
description: |
  Reference(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab.htm) Syntax MODIFY    TABLE itabitab INDEX idx USING KEY key_name(name)    itab USING KEY loop_key  FROM wa TRANSPORTING comp1 comp2 ... ASSI
version: "7.57"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_shortref.htm"
abapFile: "abapmodify_itab_shortref.htm"
keywords: ["loop", "do", "if", "try", "internal-table", "field-symbol", "abapmodify", "itab", "shortref"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [ABAP - Short Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_shortref.htm) →  M

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: MODIFY itab, ABAPMODIFY_ITAB_SHORTREF, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0AS
uggestion for improvement:)

MODIFY itab - Short Reference

[Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab.htm)

Syntax

MODIFY *{* *{* *{* *{*TABLE itab*}**|**{*itab INDEX idx*}*
             *\[*USING KEY key\_name*|*(name)*\]* *}*
         *|* *{* itab *\[*USING KEY loop\_key*\]* *}*
           FROM wa
           *\[*TRANSPORTING comp1 comp2 ...*\]*
           *\[**{*ASSIGNING <fs> *\[*CASTING*\]**}**|**{*REFERENCE INTO dref*}**\]* *}*
       *|* *{*itab FROM wa *\[*USING KEY key\_name*|*(name)*\]*
                       TRANSPORTING comp1 comp2 ...
                       WHERE [log\_exp](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlog_exp_shortref.htm)*|*(cond\_syntax)*}* *}*.

Effect

Changes lines in internal tables. A restricted [variant](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_modify.htm) works with [mesh paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_path_glosry.htm "Glossary Entry").

Additions   

-   [TABLE itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_single.htm)
    Specifies a line to be changed by matching the key values of the wa work area.
-   [itab INDEX idx](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_single.htm)
    Specifies a line to be changed by specifying a line number idx of a table index.
-   [itab *\[*USING KEY loop\_key*\]*](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_single.htm)
    Specifies the lines in a loop to be changed using the current lines.
-   [FROM wa](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_multiple.htm)
    Specifies the new content in a wa work area.
-   [TRANSPORTING comp1 comp2 ...](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_single.htm)
    Specifies the components comp1, comp2, ... to be changed.
-   [ASSIGNING <fs> *\[*CASTING*\]*](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_result.htm)
    Assigns a changed single line to a field symbol <fs> for casting.
-   [REFERENCE INTO dref](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_result.htm)
    Assigns the reference to a changed single line to a reference variabledref.
-   [WHERE log\_exp*|*(cond\_syntax)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab_multiple.htm)
    Specifies the lines to be changed by specifying a static condition log\_exp or a dynamic condition in cond\_syntax.
-   [USING KEY key\_name*|*(name)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_itab.htm)
    Specifies (statically or dynamically) a secondary table key to search for the lines to be changed.